# Software-Supply-Chain-Security

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  GitHub-Repo.txt  README.md  SECURITY.md  artifact.bundle  artifact.md  cyclonedx-sbom.json  main.py  merkle_proof.py  pyproject.toml  requirements.txt  util.py
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  scorecard.yml
tests/: test_checkpoint.py  test_consistency.py  test_debug.py  test_inclusion.py  test_log_entry.py  test_main.py  test_merkle_proof.py  test_util.py  test_verification.py
